# nominalscript

./: .gitignore  .gitmodules  Cargo.toml  README.md
docs/: compile-process.md
src/: compile.rs  compiler.rs  diagnostics.rs  main.rs  misc.rs  package.rs  project.rs  semantic.rs  syntax.rs  type_sitter.rs
src/analyses/: bindings.rs  global_bindings.json  global_bindings.ns  global_bindings.rs  mod.rs
src/analyses/bindings/: data.rs  mod.rs  names.rs
src/analyses/scopes/: expr_type_map.rs  mod.rs  module_ctx.rs  module_scopes.rs  scope.rs  scope_chain.rs  scope_imports.rs  scope_ptr.rs
src/analyses/semantic/: mod.rs
src/analyses/types/: determined.rs  fat.rs  generic.rs  inferred.rs  loc.rs  mod.rs  resolve.rs  thin.rs
src/analyses/types/fat/: data.rs  display.rs  inner.rs  mod.rs  normalize.rs  occurrences.rs  unify.rs
src/ast/: ann.rs  mod.rs  queries.rs  tree_sitter.rs  typed_nodes.rs
src/ast/tree_sitter/: mod.rs
src/compiler/: mod.rs  output.rs
src/diagnostics/: data.rs  logging.rs  mod.rs  type.rs
src/import_export/: export.rs  import_cache.rs  import_ctx.rs  import_resolution.rs  import_resolver.rs  mod.rs  module_id_map.rs
src/misc/: chain.rs  downcast_with_lifetime.rs  entry_insert.rs  eqv_ident.rs  fmt_with_ctx.rs  frozen_map_iter.rs  impl_by_map.rs  insert_entry.rs  iter_eq.rs  iter_if.rs  lazy.rs  lazy_alt.rs  mk_path.rs  mod.rs  nice_mutex.rs  once_cell_with_option.rs  once_if.rs  oob.rs  path.rs  path_patricia_map.rs  rc_unwrap_or_clone.rs  ref_iterator.rs  result_either.rs  result_filter_err.rs  vec_extend_no_dup.rs  vec_find_remove.rs
src/misc/arena/: has_name.rs  identity_ref.rs  mod.rs
src/misc/id_maps/: btree_many_to_one.rs  many_to_one.rs  map.rs  mod.rs  one_to_many.rs  roaring_bidimap.rs  roaring_map.rs  set.rs
src/old/: compile.rs  project.rs
src/old/analyses/bindings/: globals.ns  globals.rs
src/old/analyses/scopes/: expr_type_map.rs  mod.rs  module_scopes.rs  scope_imports.rs
src/old/analyses/types/: determined.rs  generic.rs  resolve.rs
src/old/analyses/types/fat/: data.rs  inner.rs  mod.rs  unify.rs
src/old/diagnostics/: data.rs  logging.rs
src/old/import_export/: import_cache.rs  mod.rs
src/old/store/: ann_arena.rs  name_arena.rs
src/semantic/: ann.rs  ctx.rs  def.rs  expr.rs  mod.rs  name.rs  package.rs  scope.rs  storage.rs  use.rs
src/semantic/ann/: mod.rs  point.rs
src/semantic/arena/: ann_arena.rs  ann_remover.rs  has_name.rs  interned.rs  mod.rs  name_arena.rs  name_remover.rs
src/semantic/expr/: mod.rs  type.rs  type_.rs  value.rs
src/semantic/scope/: mod.rs  toplevel.rs
src/semantic/storage/: ann.rs  generation.rs  has_name.rs  id.rs  root.rs  store.rs
src/semantic/storage/inner/: map.rs  set.rs  vec.rs
src/semantic/storage/store/: root_set.rs
src/storage/: ann.rs  has_name.rs  id.rs  inner.rs  store.rs
src/storage/ann/: point.rs
src/storage/inner/: map.rs  set.rs  vec.rs
src/storage/store/: root_set.rs
src/syntax/: ann.rs  mod.rs  nodes.rs  package.rs  queries.rs  tree_sitter_wrapper.rs
src/type_sitter/nominalscript/: mod.rs  nodes.rs  queries.rs
test-resources/nominalscript-package/src/: example.ns
