[package]
name = "nominalscript"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter-nominalscript = { path = "vendor/tree-sitter-nominalscript" }
auto_enums = "0.8.0"
clap = { version = "4.1.8", features = ["derive", "cargo"] }
derive_more = "0.99.17"
env_logger = "0.10.0"
intmap = "2.0.0"
join-lazy-fmt = "0.9.2"
lazy_static = "1.4.0"
log = "0.4.17"
miette = { version = "5.5.0", features = ["fancy"] }
nonempty = "0.8.1"
parking_lot = "0.12.1"
replace_with = "0.1.7"
roaring = "0.10.1"
serde_json = "1.0.93"
smol_str = "0.1.24"
thiserror = "1.0.38"
tree-sitter = "0.20.9"
tsconfig = "0.1.0"
smallvec = "1.10.0"
once_cell = "1.17.1"
enquote = "1.1.0"
globset = "0.4.10"
self_cell = "0.10.2"
indexmap = "1.9.2"
elsa = "1.8.0"
stable_deref_trait = "1.2.0"
walkdir = "2.3.3"

[dev-dependencies]
tree-sitter-typescript = "0.20.2"
