[package]
name = "nominalscript"
description = "Nominal type system over TypeScript, like how TypeScript is a structual type system over JavaScript"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Jakobeha/nominalscript"
homepage = "https://github.com/Jakobeha/nominalscript"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter-nominalscript = { path = "vendor/tree-sitter-nominalscript" }
streaming-iterator = "0.1.9"
type-sitter-lib = { path = "../type-sitter/type-sitter-lib", version = "0.3.0", features = ["yak-sitter"] }
yak-sitter = { path = "../type-sitter/yak-sitter", version = "0.3.0" }
tree-sitter = "0.20.10"
thiserror = "1.0.38"
auto_enums = "0.8.0"
clap = { version = "4.1.8", features = ["derive", "cargo"] }
env_logger = "0.10.0"
intmap = "2.0.0"
join-lazy-fmt = "0.9.2"
lazy_static = "1.4.0"
log = "0.4.17"
miette = { version = "5.5.0", features = ["fancy"] }
nonempty = "0.8.1"
parking_lot = "0.12.1"
replace_with = "0.1.7"
roaring = "0.10.1"
serde_json = "1.0.93"
smol_str = "0.1.24"
tsconfig = "0.1.0"
smallvec = "1.10.0"
once_cell = "1.17.1"
enquote = "1.1.0"
globset = "0.4.10"
self_cell = "0.10.2"
indexmap = "1.9.2"
elsa = "1.8.0"
stable_deref_trait = "1.2.0"
walkdir = "2.3.3"
either = "1.8.1"
ouroboros = "0.15.6"
typed-arena-nomut = "0.1.0"
slice-group-by = "0.3.1"

[dev-dependencies]
tree-sitter-typescript = "0.20.2"
test-log = "0.2.11"
