[package]
name = "nominalscript"
description = "Nominal type system over TypeScript, like how TypeScript is a structural type system over JavaScript"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Jakobeha/nominalscript"
homepage = "https://github.com/Jakobeha/nominalscript"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tree-sitter etc.
type-sitter-lib = { path = "../type-sitter/type-sitter-lib", version = "0.3.0", features = ["yak-sitter"] }
yak-sitter = { path = "../type-sitter/yak-sitter", version = "0.3.0" }
tree-sitter-nominalscript = { path = "vendor/tree-sitter-nominalscript" }
tree-sitter = "0.20.10"
# Derive macros
clap = { version = "4.1.8", features = ["derive"] }
thiserror = "1.0.38"
auto_enums = "0.8.0"
# Rust data-structures
typed-arena-nomut = "0.1.0"
patricia_tree = { path = "vendor/patricia_tree" }
roaring = "0.10.1"
indexmap = "1.9.2"
nonempty = "0.8.1"
smol_str = "0.2.0"
smallvec = "1.10.0"
# Rust patterns
rayon = "1.7.0"
streaming-iterator = "0.1.9"
ouroboros = "0.15.6"
once_cell = "1.17.1"
slice-group-by = "0.3.1"
lazy_static = "1.4.0"
replace_with = "0.1.7"
# File utils
tsconfig = "0.2.0"
notify-debouncer-mini = { version = "0.3.0", default-features = false }
walkdir = "2.3.3"
# String utils
enquote = "1.1.0"
globset = "0.4.10"
join-lazy-fmt = "0.9.2"
# Logging
log = "0.4.17"
env_logger = "0.10.0"

[dev-dependencies]
tree-sitter-typescript = "0.20.2"
test-log = "0.2.11"
